# dataviz-in-python

./: LICENSE  README.md  jupyter-panel-proxy.yml  pyproject.toml  setup.cfg  setup.py
src/dataviz_in_python/: config.py
src/dataviz_in_python/assets/: menu.html
src/dataviz_in_python/presentation/: considerations.py  crossfiltering.py  introduction.py  lib_altair.py  lib_bokeh.py  lib_datashader.py  lib_deckgl.py  lib_echarts.py  lib_folium.py  lib_holoviews.py  lib_hvplot.py  lib_ipywidgets.py  lib_leaflet.py  lib_matplotlib.py  lib_plotly.py  lib_plotnine.py  lib_pydeck.py  lib_pyecharts.py  lib_pyvista.py  lib_seaborn.py  lib_vega.py  lib_vtk.py  streaming.py
