[metadata]
name = dataviz-in-python
version = 0.0.1
author = Marc Skov Madsen
author_email = marc.skov.madsen@gmail.com
description = An introduction to DataViz in Python
home_page = https://github.com/MarcSkovMadsen/dataviz-in-python
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    altair
    autoflake
    black
    datashader
    folium
    holoviews
    hvplot
    invoke
    ipysheet==0.7.0
    ipywidgets_bokeh
    isort
    jupyter_bokeh
    jupyter-panel-proxy
    jupyterlab
    matplotlib
    mypy
    numpy<1.20
    panel
    plotly
    plotnine
    pooch
    pyarrow
    pydeck
    pyecharts
    pylint
    pytest
    pytest-cov
    pyvista
    scipy
    seaborn
    shapely
    twine
    vega_datasets
    vegafusion-python
    vtk
    watchdog
    xarray

[options.packages.find]
where = src